# odin-core

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: default.yaml  dev.yaml  guardrails.example.yaml  guardrails.yaml.example  homelab.yaml  skills.project.example.yaml  vps.yaml
crates/odin-audit/: Cargo.toml
crates/odin-capacity/: Cargo.toml
crates/odin-capacity/src/: capacity.rs  circuit_breaker.rs  classifier.rs  cost_controller.rs  lib.rs  metrics.rs  overflow.rs  scheduler.rs
crates/odin-compat-bash/: Cargo.toml
crates/odin-core-runtime/: Cargo.toml
crates/odin-core-runtime/src/: lib.rs
crates/odin-core-runtime/tests/: capability_manifest_enforcement.rs
crates/odin-governance/: Cargo.toml
crates/odin-migration/: Cargo.toml
crates/odin-plugin-manager/: Cargo.toml
crates/odin-plugin-manager/src/: lib.rs
docs/: cli-quickstart.md  compat-adapter-contract.md  foundation-spec.md  huginn-safety.md  migration-checklist.md  phase2-keepalive-carveout.md  plugin-system.md  private-downstream-model.md  private-plugin-layout.md  quickstart.md  release-process.md  release-readiness.md  skill-system.md  stagehand-safety.md  upgrade-v0x-to-v1x.md  upgrading-from-v0.md
examples/: odin.plugin.yaml
plugins/: plugins.lock.example
policy/: core-policy.yaml  huginn.permissions.example.yaml  policy.lock.example  private-ops-watchdog.example.yaml  projects.example.yaml  stagehand.permissions.example.yaml
schemas/: capability-manifest.v1.schema.json  learning-pack.v1.schema.json  plugin-manifest.v1.schema.json  skill-pack.v1.schema.json  skill-registry.v1.schema.json  skill-sass.v0.1.schema.json  user-data-model.v1.schema.json
(+206 files in other folders)
