[package]
name = "odin-capacity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Adaptive capacity scheduling for the Odin orchestrator"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
