[package]
name = "odin-core-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
tracing.workspace = true
odin-audit = { path = "../odin-audit" }
odin-governance = { path = "../odin-governance" }
odin-plugin-protocol = { path = "../odin-plugin-protocol" }
odin-policy-engine = { path = "../odin-policy-engine" }
