[package]
name = "odin-plugin-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
odin-plugin-protocol = { path = "../odin-plugin-protocol" }
